@@ -4,12 +4,14 @@ import DKSPACE.PhamarERP.auth.exception.UserAlreadyExistException;
 import DKSPACE.PhamarERP.i18n.config.I18NMessageResolver;
 import DKSPACE.PhamarERP.i18n.enums.ApiResponseInfo;
 import DKSPACE.PhamarERP.i18n.enums.ApiResponseStatus;
+import jakarta.validation.ConstraintViolationException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.AuthenticationException;
+import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RequestHeader;
@@ -20,7 +22,6 @@ import org.springframework.web.multipart.MaxUploadSizeExceededException;
 import java.util.List;
 import java.util.Locale;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
@@ -39,6 +40,7 @@ public class ApplicationExceptionHandler {
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ApiResponse<?> handleException(Throwable exception) {
         log.error("handleException: {}", exception.getMessage());
+        log.error("handleException class: {}", exception.getClass());
         return messageResolver.generateApiResponse(ApiResponseInfo.INTERNAL_SERVER_ERROR);
     }
 
@@ -87,6 +89,14 @@ public class ApplicationExceptionHandler {
         return messageResolver.generateApiResponse(exception.getApiResponseInfo());
     }
 
+    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiResponse<?> handleMethodNotSupportedException(HttpRequestMethodNotSupportedException exception) {
+        log.error("handleMethodNotSupportedException: {}", exception.getClass());
+        log.error(exception.getMessage());
+        return messageResolver.generateApiResponse(ApiResponseInfo.METHOD_NOT_SUPPORTED);
+    }
+
     @ExceptionHandler(ServerException.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ApiResponse<?> handleServerException(ServerException exception) {
@@ -101,15 +111,36 @@ public class ApplicationExceptionHandler {
             MethodArgumentNotValidException exception,
             @RequestHeader(name = "Accept-Language", required = false) Locale locale) {
         ApiResponse<?> apiResponse = new ApiResponse<>();
+
+
         List<ErrorDTO> errors =
                 exception.getBindingResult()
                          .getFieldErrors()
                          .stream()
                          .map(error -> ErrorDTO.builder()
                                                .field(error.getField())
-                                               .errorMessage(messageResolver.convertMessage(error.getDefaultMessage()))
+                                               .errorMessage(error.getDefaultMessage())
                                                .build())
-                         .collect(Collectors.toList());
+                         .toList();
+
+        apiResponse.setStatus(ApiResponseStatus.FAILED);
+        apiResponse.setErrors(errors);
+        return apiResponse;
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+    public ApiResponse<?> handleConstraintViolationException(
+            ConstraintViolationException exception) {
+        log.error("handleConstraintViolationException exception: ", exception);
+        ApiResponse<?> apiResponse = new ApiResponse<>();
+       var errors =         exception.getConstraintViolations()
+                         .stream()
+                         .map(error -> ErrorDTO.builder()
+                                               .field(error.getPropertyPath().toString())
+                                               .errorMessage(error.getMessage())
+                                               .build())
+                         .toList();
 
         apiResponse.setStatus(ApiResponseStatus.FAILED);
         apiResponse.setErrors(errors);
